some basic html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <title>Document</title>
+    <meta name="description" content="College Course Code">
+    <meta name="author" content="Mark Lund">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,11 +12,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <link href="css/styles.min.css" rel="stylesheet">
 </head>
-
 <body>
 
-</body>
+<div id="headerWrapper">
+    <header>
+        <h1>Header Test</h1>
+    </header>
+</div>
+<div id="navWrapper">
+    <nav>
+        <ul>
+            <li class="active"><a href="#">Test1</a></li>
+            <li><a href="#">Test2</a></li>
+            <li><a href="#">Test3</a></li>
+        </ul>
+    </nav>
+</div>
+<div id="mainWrapper">
+    <main>
+        <h2>Main Content</h2>
+    </main>
+</div>
+<div id="footerWrapper">
+    <footer>
+        <p>&copy; 2025 &bull; Mark Lund</p>
+    </footer>
+</div>
 
+</body>
 </html>
