add current year to footer

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 </div>
 <div id="footerWrapper">
     <footer>
-        <p>&copy; 2025 &bull; Mark Lund</p>
+        <p>&copy; <span id="year">x</span> Mark Lund</p>
     </footer>
 </div>
 
+<script src="js/scripts.js"></script>
 </body>
 </html>
