--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Beryl Audio</title>
     <meta name="description" content="College Course Code">
     <meta name="author" content="Mark Lund">
     <meta charset="UTF-8">
@@ -13,34 +13,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="css/styles.min.css" rel="stylesheet">
+
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
+
 <body>
 
-<div id="headerWrapper">
-    <header>
-        <h1>Header Test</h1>
-    </header>
-</div>
-<div id="navWrapper">
-    <nav>
-        <ul>
-            <li class="active"><a href="#">Test1</a></li>
-            <li><a href="#">Test2</a></li>
-            <li><a href="#">Test3</a></li>
-        </ul>
-    </nav>
-</div>
-<div id="mainWrapper">
-    <main>
-        <h2>Main Content</h2>
-    </main>
-</div>
-<div id="footerWrapper">
-    <footer>
-        <p>&copy; <span id="year">x</span> Mark Lund</p>
-    </footer>
-</div>
+    <div id="headerWrapper">
+        <header>
+            <h1>Header Test</h1>
+        </header>
+    </div>
+    <div id="navWrapper">
+        <nav>
+            <ul>
+                <li class="active"><a href="#">Test1</a></li>
+                <li><a href="#">Test2</a></li>
+                <li><a href="#">Test3</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="mainWrapper">
+        <main>
+            <h2>Main Content</h2>
+        </main>
+    </div>
+    <div id="footerWrapper">
+        <footer>
+            <p>&copy; <span id="year">x</span> Mark Lund</p>
+        </footer>
+    </div>
 
-<script src="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
