--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <div id="headerWrapper">
         <header>
-            <h1>Header Test</h1>
+            <img src="images/logo.png" alt="beryl audio logo" width="40" height="40">
+            <h1>Beryl Audio</h1>
         </header>
     </div>
     <div id="navWrapper">
