--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Beryl Audio</title>
+    <title>Home - Beryl Audio</title>
     <meta name="description" content="College Course Code">
     <meta name="author" content="Mark Lund">
     <meta charset="UTF-8">
@@ -25,7 +25,8 @@
 
     <div id="headerWrapper">
         <header>
-            <img src="images/logo.png" alt="beryl audio logo" width="40" height="40">
+            <a href="#"><img src="images/logo.png" alt="beryl audio logo" width="40" height="40" 
+                srcset="images/logo.png 1x, images/logo2x.png 2x, images/logo3x.png 3x"></a>
             <h1>Beryl Audio</h1>
         </header>
     </div>
