mobile navigation with layering

--- a/index.html
+++ b/index.html
@@ -25,17 +25,30 @@
 
     <div id="headerWrapper">
         <header>
-            <a href="#"><img src="images/logo.png" alt="beryl audio logo" width="40" height="40" 
-                srcset="images/logo.png 1x, images/logo2x.png 2x, images/logo3x.png 3x"></a>
+            <a href="#"><img src="images/logo.png" alt="beryl audio logo" width="40" height="40"
+                    srcset="images/logo.png 1x, images/logo2x.png 2x, images/logo3x.png 3x"></a>
             <h1>Beryl Audio</h1>
+            <button id="theButton"></button>
         </header>
     </div>
     <div id="navWrapper">
         <nav>
-            <ul>
-                <li class="active"><a href="#">Test1</a></li>
-                <li><a href="#">Test2</a></li>
-                <li><a href="#">Test3</a></li>
+            <ul id="theNav">
+                <li class="active"><a href="#">Home</a></li>
+                <li class="parent"><a href="#">Services</a>
+                    <ul>
+                        <li><a href="#">Mixing</a></li>
+                        <li><a href="#">Mastering</a></li>
+                        <li><a href="#">Recording</a></li>
+                        <li><a href="#">Distribution</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Hardware</a></li>
+                <li><a href="#">Booking</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Legal</a></li>
             </ul>
         </nav>
     </div>
