--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     </div>
     <div id="mainWrapper">
         <main>
+            <picture class="hero">
+                <source media="(max-width: 699px)" srcset="images/hero-small.png">
+                <source media="(max-width: 1100px)" srcset="images/hero-medium.png">
+                <img src="images/hero-large.png" alt="hero image">
+            </picture>
             <h2>Main Content</h2>
         </main>
     </div>
