--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
     <div id="mainWrapper">
         <main>
             <picture class="hero">
-                <source media="(max-width: 699px)" srcset="images/hero-small.png">
-                <source media="(max-width: 1100px)" srcset="images/hero-medium.png">
+                <source media="(max-width: 576px)" srcset="images/hero-small.png">
+                <source media="(max-width: 767px)" srcset="images/hero-medium.png">
                 <img src="images/hero-large.png" alt="hero image">
             </picture>
-            <h2>Main Content</h2>
+            <div id="contentWrapper">
+                <h2>Main Content</h2>
+            </div>
         </main>
     </div>
     <div id="footerWrapper">
