--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+    <script src="https://kit.fontawesome.com/a165b3d9f2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -61,11 +62,29 @@
             </picture>
             <div id="contentWrapper">
                 <h2>Main Content</h2>
+                <p>Did you know that Soundgoodizer is absolutely essential to any competent mix process? It's true, even OTT can't measure up to the richness that Soundgoodizer or even multiple instances of Soundgoodizer can bring to your tracks. Here at Beryl Audio we're experts, and by that we mean we've watched at least one tutorial from a washed up late 20s wannabe about how to operate VSTs in FL studio, and this qualifies us to offer the best mixing around...as long as around isn't too far. Ask us about our consulting, you've probably never considered getting Omnisphere before.</p>
             </div>
         </main>
     </div>
     <div id="footerWrapper">
         <footer>
+            <div>
+                <section class="contact">
+                    <p>Beryl Audio</p>
+                    <p><a href="mailto:contact@berylaudio.com">contact@berylaudio.com</a></p>
+                    <p><a href="https://berylaudio.com">berylaudio.com</a></p>
+                    <p><a href="tel:3108664342">310-866-4342</a></p>
+                </section>
+                <section class="social">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                </section>
+                <section class="address">
+
+                </section>
+            </div>
             <p>&copy; <span id="year">x</span> Mark Lund</p>
         </footer>
     </div>
