small screen footer styling

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </section>
                 <section class="address">
-
+                    <address>43594 Hay Rd, Arlington, VA</address>
                 </section>
             </div>
-            <p>&copy; <span id="year">x</span> Mark Lund</p>
+            <p class="legal">&copy; <span id="year">x</span> Mark Lund</p>
         </footer>
     </div>
 
