basic webpage complete

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div id="contentWrapper">
                 <h2>Main Content</h2>
                 <p>Did you know that Soundgoodizer is absolutely essential to any competent mix process? It's true, even OTT can't measure up to the richness that Soundgoodizer or even multiple instances of Soundgoodizer can bring to your tracks. Here at Beryl Audio we're experts, and by that we mean we've watched at least one tutorial from a washed up late 20s wannabe about how to operate VSTs in FL studio, and this qualifies us to offer the best mixing around...as long as around isn't too far. Ask us about our consulting, you've probably never considered getting Omnisphere before.</p>
+                <p>This Content Area has been intentionally made taller.</p>
             </div>
         </main>
     </div>
@@ -71,6 +72,7 @@
             <div>
                 <section class="contact">
                     <p>Beryl Audio</p>
+                    <p>Remixing the Future</p>
                     <p><a href="mailto:contact@berylaudio.com">contact@berylaudio.com</a></p>
                     <p><a href="https://berylaudio.com">berylaudio.com</a></p>
                     <p><a href="tel:3108664342">310-866-4342</a></p>
