added structured data

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
             </picture>
             <div id="contentWrapper">
                 <h2>Main Content</h2>
-                <p>Did you know that Soundgoodizer is absolutely essential to any competent mix process? It's true, even OTT can't measure up to the richness that Soundgoodizer or even multiple instances of Soundgoodizer can bring to your tracks. Here at Beryl Audio we're experts, and by that we mean we've watched at least one tutorial from a washed up late 20s wannabe about how to operate VSTs in FL studio, and this qualifies us to offer the best mixing around...as long as around isn't too far. Ask us about our consulting, you've probably never considered getting Omnisphere before.</p>
+                <p>Did you know that Soundgoodizer is absolutely essential to any competent mix process? It's true, even
+                    OTT can't measure up to the richness that Soundgoodizer or even multiple instances of Soundgoodizer
+                    can bring to your tracks. Here at Beryl Audio we're experts, and by that we mean we've watched at
+                    least one tutorial from a washed up late 20s wannabe about how to operate VSTs in FL studio, and
+                    this qualifies us to offer the best mixing around...as long as around isn't too far. Ask us about
+                    our consulting, you've probably never considered getting Omnisphere before.</p>
                 <p>This Content Area has been intentionally made taller.</p>
             </div>
         </main>
@@ -90,6 +95,26 @@
             <p class="legal">&copy; <span id="year">x</span> Mark Lund</p>
         </footer>
     </div>
+
+    <script type="application/ld+json">
+            {
+              "@context": "http://schema.org",
+            "@type": "LocalBusiness",
+              "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Ashburn",
+                "addressRegion": "VA",
+                "streetAddress": "43594 Hay Rd.",
+                "postalCode": "20147",
+                "addressCountry": "US"
+              },
+              "description": "A professional audio production studio for all you rmixing and recording needs.",
+              "name": "Beryl Audio",
+              "telephone": "310-866-4342",
+              "priceRange": "$300-$3000",
+              "image": "https://pbs.twimg.com/media/F6Za4tnaAAAhogO?format=png&name=small"
+            }
+    </script>
 
     <script src="js/scripts.js"></script>
 </body>
