switched to SVG icons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <script src="https://kit.fontawesome.com/a165b3d9f2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -83,10 +82,10 @@
                     <p><a href="tel:3108664342">310-866-4342</a></p>
                 </section>
                 <section class="social">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><img src="images/s-facebook.svg"></a>
+                    <a href="#"><img src="images/s-twitter.svg"></a>
+                    <a href="#"><img src="images/s-linkedin.svg"></a>
+                    <a href="#"><img src="images/s-youtube.svg"></a>
                 </section>
                 <section class="address">
                     <address>43594 Hay Rd, Arlington, VA</address>
