scss grid loops, some html

--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
                     our consulting, you've probably never considered getting Omnisphere before.</p>
                 <p>This Content Area has been intentionally made taller.</p>
             </div>
+            <div class="row card1">
+                <div class="column small-12">
+                    <h2>We offer a variety of production services:</h2>
+                </div>
+                <div class="column small-12 medium-6 large-4">
+                    <figure>
+                        <img>
+                        <figcaption>Test Card Text</figcaption>
+                    </figure>
+                </div>
+            </div>
         </main>
     </div>
     <div id="footerWrapper">
