--- a/index.html
+++ b/index.html
@@ -75,7 +75,25 @@
                 </div>
                 <div class="column small-12 medium-6 large-4">
                     <figure>
-                        <img>
+                        <img src="images/card1.png" alt="test card image">
+                        <figcaption>Test Card Text</figcaption>
+                    </figure>
+                </div>
+                <div class="column small-12 medium-6 large-4">
+                    <figure>
+                        <img src="images/card2.png" alt="test card image">
+                        <figcaption>Test Card Text</figcaption>
+                    </figure>
+                </div>
+                <div class="column small-12 medium-6 large-4">
+                    <figure>
+                        <img src="images/card3.png" alt="test card image">
+                        <figcaption>Test Card Text</figcaption>
+                    </figure>
+                </div>
+                <div class="column small-12 medium-6 large-4">
+                    <figure>
+                        <img src="images/card4.png" alt="test card image">
                         <figcaption>Test Card Text</figcaption>
                     </figure>
                 </div>
