--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
                 <div class="column small-12 medium-6 large-4">
                     <figure>
                         <img src="images/card1.png" alt="test card image">
-                        <figcaption>Test Card Text</figcaption>
+                        <figcaption>Mixing</figcaption>
                     </figure>
                 </div>
                 <div class="column small-12 medium-6 large-4">
                     <figure>
                         <img src="images/card2.png" alt="test card image">
-                        <figcaption>Test Card Text</figcaption>
+                        <figcaption>Mastering</figcaption>
                     </figure>
                 </div>
                 <div class="column small-12 medium-6 large-4">
                     <figure>
                         <img src="images/card3.png" alt="test card image">
-                        <figcaption>Test Card Text</figcaption>
+                        <figcaption>Recording</figcaption>
                     </figure>
                 </div>
                 <div class="column small-12 medium-6 large-4">
                     <figure>
                         <img src="images/card4.png" alt="test card image">
-                        <figcaption>Test Card Text</figcaption>
+                        <figcaption>Distribution</figcaption>
                     </figure>
                 </div>
             </div>
