added see more button

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <figcaption>Distribution</figcaption>
                     </figure>
                 </div>
+            <div class="column small-12">
+                <a href="#" class="seemore">See All of our Services ></a>
+            </div>
             </div>
         </main>
     </div>
